testdata/baselines/reference/submodule/conformance/paramTagTypeResolution.errors.txt
main.js(1,9): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== main.js (1 errors) ====
    var f = require('./first');
            ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    f(1, n => { })
    
==== first.js (0 errors) ====
    /** @template T
     * @param {T} x
     * @param {(t: T) => void} k
     */
    module.exports = function (x, k) { return k(x) }
    